--- a/OsmAnd/res/layout/chart_marker_view.xml
+++ b/OsmAnd/res/layout/chart_marker_view.xml
@@ -75,79 +75,50 @@
 
         </LinearLayout>
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:background="?attr/dashboard_divider" />
-
         <LinearLayout
             android:id="@+id/second_container"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             android:layout_gravity="center_vertical"
-            android:paddingStart="@dimen/chart_marker_horizontal_padding"
-            android:paddingTop="@dimen/chart_marker_vertical_padding"
-            android:paddingEnd="@dimen/chart_marker_horizontal_padding"
-            android:paddingBottom="@dimen/chart_marker_vertical_padding">
+            android:gravity="center_vertical">
 
-            <TextView
-                android:id="@id/text_value"
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:background="?attr/dashboard_divider" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textColor="@color/gpx_chart_orange"
-                android:textSize="@dimen/default_desc_text_size"
-                android:textStyle="bold"
-                tools:text="100 "/>
+                android:orientation="horizontal"
+                android:paddingStart="@dimen/chart_marker_horizontal_padding"
+                android:paddingEnd="@dimen/chart_marker_horizontal_padding">
 
-            <TextView
-                android:id="@id/text_units"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="@dimen/default_sub_text_size"
-                tools:text="km/h" />
+                <TextView
+                    android:id="@id/text_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/gpx_chart_orange"
+                    android:textSize="@dimen/default_desc_text_size"
+                    android:textStyle="bold"
+                    tools:text="100 " />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@id/text_units"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="?android:attr/textColorSecondary"
+                    android:textSize="@dimen/default_sub_text_size"
+                    tools:text="km/h" />
 
-        <LinearLayout
-            android:id="@+id/third_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:paddingStart="@dimen/chart_marker_horizontal_padding"
-            android:paddingTop="@dimen/chart_marker_vertical_padding"
-            android:paddingEnd="@dimen/chart_marker_horizontal_padding"
-            android:paddingBottom="@dimen/chart_marker_vertical_padding">
-
-            <TextView
-                android:id="@id/text_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textColor="@color/gpx_chart_green"
-                android:textSize="@dimen/default_desc_text_size"
-                android:textStyle="bold"
-                tools:text="100 "/>
-
-            <TextView
-                android:id="@id/text_units"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="%"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="@dimen/default_sub_text_size" />
+            </LinearLayout>
 
         </LinearLayout>
 
