--- a/OsmAnd/res/layout/coordinates_widget.xml
+++ b/OsmAnd/res/layout/coordinates_widget.xml
@@ -40,7 +40,7 @@
 
 			<net.osmand.plus.widgets.TextViewEx
 				android:id="@+id/first_coordinate"
-				android:layout_width="wrap_content"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center"
 				android:maxLines="1"
@@ -83,7 +83,7 @@
 
 			<net.osmand.plus.widgets.TextViewEx
 				android:id="@+id/second_coordinate"
-				android:layout_width="wrap_content"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center"
 				android:maxLines="1"
