Fix "Select key code" screen * Add additional bottom space to the screen to see the whole content in landscape mode * Use command id to know command name when key code is KEYCODE_UNKNOWN

--- a/OsmAnd/res/layout/fragment_select_key_code.xml
+++ b/OsmAnd/res/layout/fragment_select_key_code.xml
@@ -158,7 +158,8 @@
 
 				<View
 					android:layout_width="match_parent"
-					android:layout_height="@dimen/list_content_padding_large" />
+					android:layout_height="@dimen/dialog_button_ex_height"
+					android:layout_marginBottom="@dimen/content_padding"/>
 
 			</LinearLayout>
 
