--- a/OsmAnd/res/layout/fragment_select_key_code.xml
+++ b/OsmAnd/res/layout/fragment_select_key_code.xml
@@ -127,6 +127,7 @@
 							android:visibility="gone">
 
 							<androidx.appcompat.widget.AppCompatImageButton
+								android:id="@+id/warning_icon"
 								style="@style/Widget.AppCompat.ActionButton"
 								android:layout_width="@dimen/dialog_content_margin"
 								android:layout_height="@dimen/dialog_content_margin"
