--- a/OsmAnd/res/layout/copyright_card.xml
+++ b/OsmAnd/res/layout/copyright_card.xml
@@ -31,7 +31,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="@dimen/list_header_settings_top_margin"
-				android:text="@string/info_button"
+				android:text="@string/shared_string_copyright"
 				android:textColor="?android:textColorPrimary"
 				android:textSize="@dimen/default_desc_text_size"
 				app:typeface="@string/font_roboto_medium" />
@@ -39,24 +39,17 @@
 		</LinearLayout>
 
 		<include
-			android:id="@+id/size_container"
-			layout="@layout/item_with_title_desc" />
-
-		<include
-			android:id="@+id/created_on_container"
-			layout="@layout/item_with_title_desc" />
-
-		<include
-			android:id="@+id/location_container"
-			layout="@layout/item_with_title_desc" />
-
-		<include
-			android:id="@+id/link_container"
+			android:id="@+id/author_container"
 			layout="@layout/item_with_title_desc"
 			android:visibility="gone" />
 
 		<include
-			android:id="@+id/description_container"
+			android:id="@+id/year_container"
+			layout="@layout/item_with_title_desc"
+			android:visibility="gone" />
+
+		<include
+			android:id="@+id/license_container"
 			layout="@layout/item_with_title_desc"
 			android:visibility="gone" />
 
