--- a/OsmAnd/res/layout/configure_buttons_card.xml
+++ b/OsmAnd/res/layout/configure_buttons_card.xml
@@ -17,12 +17,20 @@
 		<include layout="@layout/configure_widgets_header" />
 
 		<include
-			android:id="@+id/reset_button"
-			layout="@layout/configure_screen_list_item_button" />
+			android:id="@+id/compass_button"
+			layout="@layout/configure_screen_list_item" />
 
 		<include
-			android:id="@+id/copy_button"
-			layout="@layout/configure_screen_list_item_button" />
+			android:id="@+id/map_3d_mode_button"
+			layout="@layout/configure_screen_list_item" />
+
+		<include
+			android:id="@+id/distance_by_tap_button"
+			layout="@layout/configure_screen_list_item" />
+
+		<include
+			android:id="@+id/quick_actions_button"
+			layout="@layout/configure_screen_list_item" />
 
 	</LinearLayout>
 
