--- a/OsmAnd/res/layout/configure_widgets_other_card.xml
+++ b/OsmAnd/res/layout/configure_widgets_other_card.xml
@@ -17,6 +17,10 @@
 		<include layout="@layout/configure_widgets_header" />
 
 		<include
+			android:id="@+id/map_display_position_button"
+			layout="@layout/configure_screen_list_item" />
+
+		<include
 			android:id="@+id/distance_by_tap_button"
 			layout="@layout/configure_screen_list_item" />
 
