--- a/OsmAnd/res/layout/metadata_card.xml
+++ b/OsmAnd/res/layout/metadata_card.xml
@@ -15,7 +15,7 @@
 	</FrameLayout>
 
 	<LinearLayout
-		android:id="@+id/extensions_container"
+		android:id="@+id/item_container"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:background="?attr/list_background_color"
@@ -29,6 +29,7 @@
 			android:paddingHorizontal="@dimen/content_padding">
 
 			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/card_title"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="@dimen/list_header_settings_top_margin"
