--- a/OsmAnd/res/layout/gpx_info_card.xml
+++ b/OsmAnd/res/layout/gpx_info_card.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:background="?attr/activity_background_basic"
 	android:orientation="vertical">
 
-	<FrameLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:background="?attr/activity_background_basic">
-
-		<include layout="@layout/list_item_divider" />
-
-	</FrameLayout>
+	<include layout="@layout/list_item_divider" />
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -28,37 +23,22 @@
 			android:paddingHorizontal="@dimen/content_padding">
 
 			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/header"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="@dimen/list_header_settings_top_margin"
-				android:text="@string/info_button"
 				android:textColor="?android:textColorPrimary"
 				android:textSize="@dimen/default_desc_text_size"
-				app:typeface="@string/font_roboto_medium" />
+				app:typeface="@string/font_roboto_medium"
+				tools:text="@string/info_button" />
 
 		</LinearLayout>
 
-		<include
-			android:id="@+id/size_container"
-			layout="@layout/item_with_title_desc" />
-
-		<include
-			android:id="@+id/created_on_container"
-			layout="@layout/item_with_title_desc" />
-
-		<include
-			android:id="@+id/location_container"
-			layout="@layout/item_with_title_desc" />
-
-		<include
-			android:id="@+id/link_container"
-			layout="@layout/item_with_title_desc"
-			android:visibility="gone" />
-
-		<include
-			android:id="@+id/description_container"
-			layout="@layout/item_with_title_desc"
-			android:visibility="gone" />
+		<LinearLayout
+			android:id="@+id/items_container"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical" />
 
 	</LinearLayout>
 
