Fix "Battery optimization" feature after UI review + Open system settings for a particular application (OsmAnd) instead of opening list of all applications (when user click on "Battery optimization settings" option). + Fix line spacing for description.

--- a/OsmAnd/res/layout/bottom_sheet_icon_title_description.xml
+++ b/OsmAnd/res/layout/bottom_sheet_icon_title_description.xml
@@ -31,6 +31,7 @@
 		android:layout_height="wrap_content"
 		android:textColor="?android:textColorPrimary"
 		android:textSize="@dimen/default_list_text_size"
+		android:lineSpacingExtra="@dimen/titleLineSpacingExtra"
 		tools:text="@string/speed_cameras_legal_descr" />
 
 </LinearLayout>
