--- a/OsmAnd/res/layout/map_hud_bottom.xml
+++ b/OsmAnd/res/layout/map_hud_bottom.xml
@@ -13,42 +13,55 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 
-		<FrameLayout
-			android:id="@+id/map_alarm_warning"
-			android:layout_width="@dimen/map_alarm_size"
-			android:layout_height="@dimen/map_alarm_size"
-			android:layout_gravity="bottom|start"
-			android:layout_marginStart="@dimen/map_button_shadow_margin"
-			android:layout_marginBottom="@dimen/map_alarm_bottom_margin">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="vertical"
+			android:layout_marginBottom="@dimen/map_alarm_bottom_margin"
+			android:layout_gravity="bottom|start">
 
-			<androidx.appcompat.widget.AppCompatImageView
-				android:id="@+id/map_alarm_warning_icon"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"
-				osmand:srcCompat="@drawable/warnings_limit" />
+			<FrameLayout
+				android:id="@+id/map_alarm_warning"
+				android:layout_width="@dimen/map_alarm_size"
+				android:layout_height="@dimen/map_alarm_size"
+				android:layout_marginStart="@dimen/content_padding_medium">
 
-			<TextView
-				android:id="@+id/map_alarm_warning_text"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"
-				android:textColor="@color/activity_background_color_dark"
-				android:textSize="@dimen/map_alarm_text_size"
-				android:textStyle="bold"
-				tools:text="60" />
+				<androidx.appcompat.widget.AppCompatImageView
+					android:id="@+id/map_alarm_warning_icon"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					osmand:srcCompat="@drawable/warnings_limit" />
 
-			<TextView
-				android:id="@+id/map_alarm_warning_text_bottom"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="bottom|center_horizontal"
-				android:layout_marginBottom="@dimen/map_alarm_bottom_text_margin"
-				android:textSize="@dimen/map_alarm_bottom_text_size"
-				android:textStyle="bold"
-				tools:text="1.2 km"
-				tools:textColor="@color/activity_background_color_dark" />
-		</FrameLayout>
+				<TextView
+					android:id="@+id/map_alarm_warning_text"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:textColor="@color/activity_background_color_dark"
+					android:textSize="@dimen/map_alarm_text_size"
+					android:textStyle="bold"
+					tools:text="60" />
+
+				<TextView
+					android:id="@+id/map_alarm_warning_text_bottom"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="bottom|center_horizontal"
+					android:layout_marginBottom="@dimen/map_alarm_bottom_text_margin"
+					android:textSize="@dimen/map_alarm_bottom_text_size"
+					android:textStyle="bold"
+					tools:text="1.2 km"
+					tools:textColor="@color/activity_background_color_dark" />
+			</FrameLayout>
+
+
+			<include
+				android:id="@+id/speedometer_widget"
+				layout="@layout/speedometer_widget"/>
+
+		</LinearLayout>
+
 
 		<LinearLayout
 			android:id="@+id/map_transparency_layout"
