Small fixes for quick actions

--- a/OsmAnd/res/layout/map_quick_actions_button.xml
+++ b/OsmAnd/res/layout/map_quick_actions_button.xml
@@ -6,6 +6,4 @@
 	android:layout_height="@dimen/map_button_size"
 	android:layout_gravity="bottom|end"
 	android:contentDescription="@string/configure_screen_quick_action"
-	android:visibility="gone"
-	tools:src="@drawable/ic_action_remove_dark"
-	tools:visibility="visible" />
+	tools:src="@drawable/ic_action_remove_dark" />
