--- a/OsmAnd/res/layout/fragment_colors_palette.xml
+++ b/OsmAnd/res/layout/fragment_colors_palette.xml
@@ -16,10 +16,18 @@
 
 	</com.google.android.material.appbar.AppBarLayout>
 
-	<net.osmand.plus.widgets.FlowLayout
-		android:id="@+id/colors_palette"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_margin="@dimen/content_padding" />
+	<ScrollView
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="1"
+		android:fillViewport="true">
+
+		<net.osmand.plus.widgets.FlowLayout
+			android:id="@+id/colors_palette"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_margin="@dimen/content_padding"/>
+
+	</ScrollView>
 
 </LinearLayout>
