--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -5409,4 +5409,8 @@
 	<string name="poi_nfs_recreation_area_activity_description">Activity description</string>
 	<string name="poi_nfs_recreation_area_accessibility_info">Accessibility info</string>
 
+	<string name="poi_via">Via</string>
+
+	<string name="poi_photo_booth">Photo booth</string>
+
 </resources>
