--- a/OsmAnd/res/layout/speedometer_settings_fragment.xml
+++ b/OsmAnd/res/layout/speedometer_settings_fragment.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="?attr/activity_background_color"
@@ -38,9 +37,9 @@
 				android:minHeight="@dimen/toolbar_height"
 				osmand:layout_collapseMode="pin"
 				osmand:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
+				osmand:title="@string/shared_string_speedometer"
 				osmand:titleMarginEnd="0dp"
-				osmand:titleMarginStart="0dp"
-				tools:title="@string/map_updates_for_mappers">
+				osmand:titleMarginStart="0dp">
 
 			</androidx.appcompat.widget.Toolbar>
 
@@ -169,42 +168,42 @@
 					android:layout_height="4dp"
 					android:background="?attr/activity_background_color" />
 
-				<include
-					android:id="@+id/settings_top_divider"
-					layout="@layout/card_top_divider" />
-
 				<LinearLayout
 					android:id="@+id/settings"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:background="?attr/list_background_color"
 					android:orientation="vertical">
+
+					<include
+						android:id="@+id/settings_top_divider"
+						layout="@layout/card_top_divider" />
 
 					<net.osmand.plus.widgets.TextViewEx
 						style="@style/TitleStyle.Medium"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
-						android:layout_marginHorizontal="@dimen/content_padding"
-						android:layout_marginVertical="@dimen/content_padding_small"
+						android:background="?attr/list_background_color"
+						android:paddingHorizontal="@dimen/content_padding"
+						android:paddingVertical="@dimen/content_padding_small"
 						android:text="@string/shared_string_settings"
 						android:textColor="?android:textColorPrimary" />
 
 					<LinearLayout
-						android:id="@+id/classification_properties"
+						android:id="@+id/items_container"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
+						android:background="?attr/list_background_color"
 						android:orientation="vertical">
+
+						<include
+							android:id="@+id/alerts_type"
+							layout="@layout/configure_screen_list_item" />
 
 					</LinearLayout>
 
-				</LinearLayout>
+					<include layout="@layout/card_bottom_divider" />
 
-				<LinearLayout
-					android:id="@+id/items_container"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:background="?attr/list_background_color"
-					android:orientation="vertical" />
+				</LinearLayout>
 
 			</LinearLayout>
 
