--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -1852,6 +1852,7 @@
 	<string name="poi_description_payment">Payment description</string>
 
 	<string name="poi_events_venue">Events venue</string>
+	<string name="poi_music_venue">Music venue</string>
 
 	<string name="poi_diet_vegetarian_filter_yes">Vegetarian</string>
 	<string name="poi_diet_vegetarian_few">Vegetarian (few)</string>
