--- a/OsmAnd/res/values/no_translate.xml
+++ b/OsmAnd/res/values/no_translate.xml
@@ -57,8 +57,10 @@
     <string name="items_modified">items modified</string>
     <string name="osmand_unlimited">OsmAnd Unlimited</string>
     <string name="markers">Markers</string>
-    <string name="osm_oauth_developer_key">v8G8r9NLJZGMV4he5lwbQlz620FNVARKjI9Bm5UJ</string>
-    <string name="osm_oauth_developer_secret">jDvM95Ne1Bq2BDTmIfB6b3ZMxvdK87WGfp6DC07J</string>
-    <string name="osm_oauth_consumer_key">Ti2qq3fo4i4Wmuox3SiWRIGq3obZisBHnxmcM05y</string>
-    <string name="osm_oauth_consumer_secret">lxulb3HYoMmd2cC4xxNe1dyfRMAY8dS0eNihJ0DM</string>
+<!--    <string name="osm_oauth_developer_key">v8G8r9NLJZGMV4he5lwbQlz620FNVARKjI9Bm5UJ</string>-->
+<!--    <string name="osm_oauth_developer_secret">jDvM95Ne1Bq2BDTmIfB6b3ZMxvdK87WGfp6DC07J</string>-->
+<!--    <string name="osm_oauth_consumer_key">Ti2qq3fo4i4Wmuox3SiWRIGq3obZisBHnxmcM05y</string>-->
+<!--    <string name="osm_oauth_consumer_secret">lxulb3HYoMmd2cC4xxNe1dyfRMAY8dS0eNihJ0DM</string>-->
+    <string name="osm_oauth2_client_id" translatable="false">P-byvAHx1s3qB7cc8VsYikaVBUnMhimeE1VQ0rYot0k</string>
+    <string name="osm_oauth2_client_secret" translatable="false">xegLrDp73nwh2IumrfhWnrRw0P615T-ZSmIhbsJD1sg</string>
 </resources>
